Refactored to use jaxb
git-svn-id: http://taverna.googlecode.com/svn@15380 bf327186-88b3-11dd-a302-d386e5130c1c